gccida/g2/biv_total_increment
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2924:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2924:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rbx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2929:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2930:6: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( biv ) 
     ^~~
     div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2934:19: error: use of undeclared identifier 'biv'
v5 = *( ( _BYTE *)biv + 100); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2935:24: error: use of undeclared identifier 'biv'
if ( ( v5 & 8) == 0 || biv->mult_val != const_int_rtx[65] || ( v5 & 0x20) != 0 ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2937:48: error: use of undeclared identifier 'biv'
v4 = fold_rtx_mult_add( v2, const_int_rtx[65], biv->add_val, biv->mode); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2937:62: error: use of undeclared identifier 'biv'
v4 = fold_rtx_mult_add( v2, const_int_rtx[65], biv->add_val, biv->mode); 
                                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2938:1: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2938:7: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/unroll.c:2940:7: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( !biv ) 
      ^~~
      div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/biv_total_increment/src/obj/unroll.o] Error 1
